Adding all events html and modifiying admin page

--- a/events/templates/events/navbar.html
+++ b/events/templates/events/navbar.html
@@ -8,7 +8,7 @@
         <div class="navbar-nav">
           <a class="nav-link" href="{% url 'home' %}">Home</a>
           <a class="nav-link" href="{% url 'calendar' %}">Calendar</a>
-          <a class="nav-link" href="#">More stuffs</a>
+          <a class="nav-link" href="{% url 'events-list' %}">Current Events</a>
           <a class="nav-link" href="#">Other stuffs</a>
         </div>
       </div>
