Add Venues page

--- a/events/templates/events/navbar.html
+++ b/events/templates/events/navbar.html
@@ -9,6 +9,7 @@
           <a class="nav-link" href="{% url 'home' %}">Home</a>
           <a class="nav-link" href="{% url 'calendar' %}">Calendar</a>
           <a class="nav-link" href="{% url 'events-list' %}">Current Events</a>
+          <a class="nav-link" href="{% url 'add-venue' %}">Add venue</a>
           <a class="nav-link" href="#">Other stuffs</a>
         </div>
       </div>
