--- a/events/templates/events/navbar.html
+++ b/events/templates/events/navbar.html
@@ -10,8 +10,17 @@
           <a class="nav-link" href="{% url 'calendar' %}">Calendar</a>
           <a class="nav-link" href="{% url 'events-list' %}">Current Events</a>
           <a class="nav-link" href="{% url 'add-venue' %}">Add venue</a>
-          <a class="nav-link" href="#">Other stuffs</a>
+          <a class="nav-link" href="{% url 'list-venue' %}">Venues</a>
+
+          
         </div>
+        
+        <form class="d-flex" method= POST action= {% url 'search-venue' %} role="search">
+          {% csrf_token %}
+          <input class="form-control me-2" type="search" placeholder="Search Venue" aria-label="Search" name="searched">
+          <button class="btn btn-outline-secondary" type="submit">Search</button>
+        </form>
+
       </div>
     </div>
   </nav>
