--- a/events/templates/events/navbar.html
+++ b/events/templates/events/navbar.html
@@ -6,11 +6,15 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
+          
           <a class="nav-link" href="{% url 'home' %}">Home</a>
           <a class="nav-link" href="{% url 'calendar' %}">Calendar</a>
+
           <a class="nav-link" href="{% url 'events-list' %}">Current Events</a>
-          <a class="nav-link" href="{% url 'add-venue' %}">Add venue</a>
+          <a class="nav-link" href="{% url 'add-event' %}">Add event</a>
+          
           <a class="nav-link" href="{% url 'list-venue' %}">Venues</a>
+          <a class="nav-link" href="{% url 'add-venue' %}">Add venue</a>
 
           
         </div>
