--- a/events/templates/events/update_event.html
+++ b/events/templates/events/update_event.html
@@ -2,13 +2,15 @@
 
 {% block content %}
     <center>
-        <h1> Update {{venue}}</h1>
+        <h1> Update {{event}}</h1>
         <form action="" method=POST>
             {% csrf_token %}
             {{form.as_p}}
             <input type="submit" value="Update" class= "btn btn-secondary">
         </form>
-        
+        <br>
+        <br>
+        <a href="{% url 'delete-event' event.id %}" class="btn btn-danger" role="button">Delete</a>
     </center>
 
 {% endblock content %}
