--- a/events/templates/events/navbar.html
+++ b/events/templates/events/navbar.html
@@ -10,13 +10,32 @@
           <a class="nav-link" href="{% url 'home' %}">Home</a>
           <a class="nav-link" href="{% url 'calendar' %}">Calendar</a>
 
-          <a class="nav-link" href="{% url 'events-list' %}">Current Events</a>
-          <a class="nav-link" href="{% url 'add-event' %}">Add event</a>
-          
-          <a class="nav-link" href="{% url 'list-venue' %}">Venues</a>
-          <a class="nav-link" href="{% url 'add-venue' %}">Add venue</a>
 
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Events
+            </a>
+            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+              <li><a class="dropdown-item" href="{% url 'events-list' %}">List Events</a></li>
+              <li><a class="dropdown-item" href="{% url 'add-event' %}">Add event</a></li>
+            </ul>
+          </li>
           
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Venues
+            </a>
+            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+              <li><a class="dropdown-item" href="{% url 'list-venue' %}"> List Venues</a></li>
+              <li><a class="dropdown-item" href="{% url 'add-venue' %}">Add venue</a></li>
+              <li><a class="dropdown-item" href="{% url 'venue-text' %}">Venues.txt</a></li>
+              <li><a class="dropdown-item" href="{% url 'venue-csv' %}">Venues.csv</a></li>
+            </ul>
+          </li>
+
+
         </div>
         
         <form class="d-flex" method= POST action= {% url 'search-venue' %} role="search">
