--- a/events/templates/events/navbar.html
+++ b/events/templates/events/navbar.html
@@ -32,6 +32,7 @@
               <li><a class="dropdown-item" href="{% url 'add-venue' %}">Add venue</a></li>
               <li><a class="dropdown-item" href="{% url 'venue-text' %}">Venues.txt</a></li>
               <li><a class="dropdown-item" href="{% url 'venue-csv' %}">Venues.csv</a></li>
+              <li><a class="dropdown-item" href="{% url 'venue-pdf' %}">Venues.pdf</a></li>
             </ul>
           </li>
 
