--- a/events/templates/events/venues.html
+++ b/events/templates/events/venues.html
@@ -51,5 +51,25 @@
 
 
     </center>
+<hr><br><br>
+
+<nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center">
+
+{% if venues_list.has_previous %}
+  <li class="page-item"><a class="page-link" href="?page=1">&laquo First</a></li>
+  <li class="page-item"><a class="page-link" href="?page={{venues_list.previous_page_number}}"> Previous</a></li>
+{% endif %}
+
+<li class="page-item disabled"><a class="page-link" href="?page={{venues_list.number}}"> Page {{venues_list.number}} of {{venues_list.paginator.num_pages}}</a></li>
+
+{% if  venues_list.has_next%}
+  <li class="page-item"><a class="page-link" href="?page={{venues_list.next_page_number}}"> Next</a></li>
+  <li class="page-item"><a class="page-link" href="?page={{venues_list.paginator.num_pages}}"> Last &raquo </a></li>
+{% endif %}
+
+</ul>
+</nav>
+
 
 {% endblock content %}
