--- a/events/templates/events/navbar.html
+++ b/events/templates/events/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg bg-light justify-content-between">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">My club</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -8,8 +8,16 @@
         <div class="navbar-nav">
           
           <a class="nav-link" href="{% url 'home' %}">Home</a>
+            {% if user.is_authenticated %}
+              <a class="nav-link"  href="{% url 'logout'%}">Logout</a>
+            
+            {% else %}
+              <a class="nav-link"  href="{% url 'register_user'%}">Register</a>
+              <a class="nav-link"  href="{% url 'login'%}">Login</a>
+            {% endif %}
+          
+          
           <a class="nav-link" href="{% url 'calendar' %}">Calendar</a>
-
 
 
           <li class="nav-item dropdown">
@@ -44,6 +52,11 @@
           <input class="form-control me-2" type="search" placeholder="Search Venue" aria-label="Search" name="searched">
           <button class="btn btn-outline-secondary" type="submit">Search</button>
         </form>
+
+
+          
+          
+
 
       </div>
     </div>
